[gd_scene load_steps=5 format=3 uid="uid://wrgs2h3idwow"]

[ext_resource type="Script" path="res://Scripts/Gun/Gun.gd" id="1_gy1dr"]
[ext_resource type="PackedScene" uid="uid://dbkyu54q2n4qu" path="res://Prefabs/itemDesc.tscn" id="3_3tjjb"]
[ext_resource type="Texture2D" uid="uid://o3gjucyaluhf" path="res://Sprites/Guns/Revolver.png" id="3_ae6g3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nskd4"]
radius = 23.0

[node name="Revolver" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_gy1dr")
gun_name = "Revolver"
max_ammo = 6
precision = 2
damage = 2
bullet_velocity = 87
reload_time = 0.7
precision_recover_time = 1.0
fire_rate = 0.45
spray = 0.5
knockback = 0.4
position_offset = Vector2(48, 0)
bullet_origin_vector = Vector2(17, -5)
target_point = Array[Vector2]([Vector2(22, -5)])
spr = ExtResource("3_ae6g3")
item_desc = ExtResource("3_3tjjb")
desc = "[color=yellow]REVOLVER[/color]

DMG: [color=orange]MID[/color]
RELOAD TIME: [color=green]FAST[/color]

\"pew pew ye haw\""

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_ae6g3")

[node name="OriginPoint" type="Marker2D" parent="."]
position = Vector2(17, -5)

[node name="BulletTargetPoint" type="Marker2D" parent="."]
position = Vector2(22, -5)

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="PrecisionRecoveryTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ItemPickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupArea"]
shape = SubResource("CircleShape2D_nskd4")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 24.0
offset_right = 20.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="body_entered" from="ItemPickupArea" to="." method="_on_item_pickup_area_body_entered"]
[connection signal="body_exited" from="ItemPickupArea" to="." method="_on_item_pickup_area_body_exited"]
[connection signal="mouse_entered" from="ItemPickupArea" to="." method="_on_item_pickup_area_mouse_entered"]
[connection signal="mouse_exited" from="ItemPickupArea" to="." method="_on_item_pickup_area_mouse_exited"]
